# CH58x-CMAKE-Clion-Template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
APP/: Main.c  main.c  peripheral.c
FreeRTOS/portable/GCC/RISC-V/: port.c  portASM.S
HAL/include/: LED.h  config.h
Profile/: devinfoservice.c  gattprofile.c
StdPeriphDriver/inc/: CH58x_gpio.h
USB_LIB/: CH583UFI.c
